gap fix author info

--- a/assets/styles/standard.css
+++ b/assets/styles/standard.css
@@ -992,7 +992,7 @@ h3 {
         padding-left: 30px;
         padding-right: 30px;
 
-        gap: 12px;
+        gap: 36px;
     }
 
     .post-metadata {
@@ -1151,7 +1151,7 @@ h3 {
         padding-top: 24px;
         padding-left: 15px;
         padding-right: 15px;
-        gap: 12px;
+        gap: 36px;
     }
 
     .post-metadata {
